# Seekers_Alliance_Projects

./: .gitignore  BUILD_DOCS.md  HANDOFF.md  README.md  app.py  bbbest.py  bbest.py  channels_to_description.py  curator_links.csv  curators.csv  curators_2746910_test.csv  curators_2825560_test.csv  curators_3112170_test.csv  curators_620_test.csv  curators_646570_test.csv  curators_all_games.csv  curators_detailed.csv  curators_full.csv  curators_multi_games_test.csv  dice legends full.numbers  dice.csv  dice_filled.csv  empty_file.txt  extract_contacts_from_youtube.py  fill_about_missing.py  merge_runs.py  new_games.txt  old-requirements.txt  paliadone.csv  portal2_debug.html  reqs.txt  requirements.txt  rq.txt  run_app.py  run_yt.py  start_mac.command  start_windows.bat  steam_search_scrape.py  steam_test.csv  test.py  (+8 more)
debug_about_missing/: 14CREW_1763238762.html  1games_1762447753.html  1games_1762470533.html  1games_1763014641.html  1games_1763018982.html  1games_1763237882.html  3_Piece_Crew_1762459286.html  3_Piece_Crew_1762500847.html  3_Piece_Crew_1763014371.html  9Gentlemen-HL_1763244817.html  A_Good_Freaking_Gamer_1762500821.html  A_Good_Freaking_Gamer_1763014117.html  A_Good_Freaking_Gamer_1763036296.html  Alcoholic_Fucks_1763039354.html  Anchovy_Hunters_1763036475.html  Anime___1762501522.html  (+251 more)
non_py/youtube-contacts-scraper/: README.md  pyproject.toml  requirements.txt
non_py/youtube-contacts-scraper/src/: discover_youtubers.py  generate_csv.py  yt_utils.py
non_py/youtube-contacts-scraper/tests/: test_discover.py  test_generate_csv.py
(+369 files in other folders)
