[tool.poetry]
name = "youtube-contacts-scraper"
version = "0.1.0"
description = "A project for discovering YouTubers and generating CSV files with their details."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pandas = "^1.3.3"
playwright = "^1.16.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"